fixed links to be relative to root made scrollbar always visible

--- a/source/stylesheets/all.sass
+++ b/source/stylesheets/all.sass
@@ -12,6 +12,7 @@ body
   text-align: center
   margin: 0 auto
   min-width: 600px
+  overflow-y: scroll
 
 footer
   width: 100%
